--- a/.github/workflows/build-dotnet-library.yml
+++ b/.github/workflows/build-dotnet-library.yml
@@ -1,6 +1,12 @@
 name: .NET Library BUILD
 on:
-  workflow_dispatch
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
+  release:
+    types:
+      - published
 
 env:
   # Stop wasting time caching packages
@@ -9,19 +15,20 @@ env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   # GitHub Packaged Feed settings
   GITHUB_FEED: https://nuget.pkg.github.com/azure-mobile-apps/
-  GITHUB_USER: ${{ secrets.GITHUB_PUBLISH_USER }}
+  GITHUB_USER: ${{ secrets.GITHUB_FEED_ACTOR }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  # Officual NuGet Feed settings
+  # Official NuGet Feed settings
   NUGET_FEED: https://api.nuget.org/v3/index.json
   NUGET_KEY: ${{ secrets.NUGET_KEY }}
 
-defaults:
-  run:
-    working-directory: sdk/dotnet
+
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: sdk/dotnet
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -63,3 +70,58 @@ jobs:
         with:
           name: nupkg
           path: sdk/dotnet/src/**/bin/Release/*.nupkg      
+
+  prerelease:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: nupkg
+      
+      - name: Push to GitHub Feed
+        run: |
+          for f in ./nupkg/*.nupkg
+          do
+            curl -vX PUT -u "$GITHUB_USER:$GITHUB_TOKEN" -F package=@$f $GITHUB_FEED
+          done
+
+  deploy:
+    needs: build
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: sdk/dotnet
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.202'
+
+      - name: Create Release NuGet package
+        run: |
+          arrTag=(${GITHUB_REF//\// })
+          VERSION="${arrTag[2]}"
+          echo Version: $VERSION
+          VERSION="${VERSION//v}"
+          echo Clean Version: $VERSION
+          dotnet pack -v normal -c Release --include-symbols --include-source -p:PackageVersion=$VERSION -o nupkg
+
+      - name: Push to GitHub Feed
+        run: |
+          for f in ./nupkg/*.nupkg
+          do
+            curl -vX PUT -u "$GITHUB_USER:$GITHUB_TOKEN" -F package=@$f $GITHUB_FEED
+          done
+
+      - name: Push to NuGet Feed
+        run: dotnet nuget push ./nupkg/*.nupkg --source $NUGET_FEED --skip-duplicate --api-key $NUGET_KEY
+
