--- a/.github/workflows/build-dotnet-library.yml
+++ b/.github/workflows/build-dotnet-library.yml
@@ -154,7 +154,7 @@ jobs:
           echo Version: $VERSION
           VERSION="${VERSION//v}"
           echo Clean Version: $VERSION
-          dotnet pack -v normal -c Release -p:PackageVersion=$VERSION -o nupkg ./AzureMobileTemplates.csproj
+          dotnet pack -v normal -c Release -p:PackageVersion=0.0.$GITHUB_RUN_ID -o nupkg ./AzureMobileTemplates.csproj
 
       - name: Push to NuGet Feed
         run: |
