--- a/sdk/dotnet/test/Microsoft.AspNetCore.Datasync.NSwag.Test/Microsoft.AspNetCore.Datasync.NSwag.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.AspNetCore.Datasync.NSwag.Test/Microsoft.AspNetCore.Datasync.NSwag.Test.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<LangVersion>11.0</LangVersion>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-
+		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<IsPackable>false</IsPackable>
+		<ImplicitUsings>true</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -15,7 +15,7 @@
 	<ItemGroup>
 		<EmbeddedResource Include="swagger.json" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.13" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.13" />
@@ -30,7 +30,7 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\Microsoft.AspNetCore.Datasync.EFCore\Microsoft.AspNetCore.Datasync.EFCore.csproj" />
 		<ProjectReference Include="..\..\src\Microsoft.AspNetCore.Datasync.NSwag\Microsoft.AspNetCore.Datasync.NSwag.csproj" />
