--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
@@ -22,14 +22,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.5.5" />
-		<PackageReference Include="Uno.WinUI" Version="4.9.0-dev.332" />
+		<PackageReference Include="Uno.Resizetizer" Version="1.1.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.4" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.20" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.332" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.332" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.20" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
