--- a/sdk/dotnet/test/Microsoft.Datasync.Integration.Test/Microsoft.Datasync.Integration.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.Datasync.Integration.Test/Microsoft.Datasync.Integration.Test.csproj
@@ -13,7 +13,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.13" />
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-		<PackageReference Include="Moq" Version="4.18.4" />
+		<PackageReference Include="NSubstitute" Version="5.0.0" />
 		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 		<PackageReference Include="xunit" Version="2.4.2" />
 		<PackageReference Include="Xunit.Combinatorial" Version="1.5.25" />
